--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,7 @@
     "rootDir": "./dist/src",
     "paths": {
       "snag-solutions/*": ["dist/src/*"],
-      "snag-solutions": ["dist/src/index.ts"],
+      "snag-solutions": ["dist/src/index.ts"]
     },
     "noEmit": false,
     "declaration": true,
